# solana-collateral

./: Anchor.toml  README.md
programs/solana-proof-of-collateral/: Cargo.toml
programs/solana-proof-of-collateral/src/: lib.rs  state.rs
tests/: solana-proof-of-collateral.ts
