[package]
name = "solana-proof-of-collateral"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_proof_of_collateral"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-spl = "0.31.0"
anchor-lang = "0.31.0"
